crates/stef-parser/tests/snapshots/parser__parse@types_generic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "struct Sample {\n    f1: vec<u32> @1,\n    f2: hash_map<u32, string> @2,\n    f3: hash_set<u32> @3,\n    f4: option<u32> @4,\n    f5: non_zero<u32> @5,\n}"
input_file: crates/stef-parser/tests/inputs/types_generic.stef
---
Schema {
    path: Some(
        "types_generic.stef",
    ),
    source: "struct Sample {\n    f1: vec<u32> @1,\n    f2: hash_map<u32, string> @2,\n    f3: hash_set<u32> @3,\n    f4: option<u32> @4,\n    f5: non_zero<u32> @5,\n}\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 7,
                        end: 13,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f1",
                                span: Span {
                                    start: 20,
                                    end: 22,
                                },
                            },
                            ty: Type {
                                value: Vec(
                                    Type {
                                        value: U32,
                                        span: Span {
                                            start: 28,
                                            end: 31,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 24,
                                    end: 32,
                                },
                            },
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 33,
                                    end: 35,
                                },
                            },
                            span: Span {
                                start: 20,
                                end: 35,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f2",
                                span: Span {
                                    start: 41,
                                    end: 43,
                                },
                            },
                            ty: Type {
                                value: HashMap(
                                    (
                                        Type {
                                            value: U32,
                                            span: Span {
                                                start: 54,
                                                end: 57,
                                            },
                                        },
                                        Type {
                                            value: String,
                                            span: Span {
                                                start: 59,
                                                end: 65,
                                            },
                                        },
                                    ),
                                ),
                                span: Span {
                                    start: 45,
                                    end: 66,
                                },
                            },
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 67,
                                    end: 69,
                                },
                            },
                            span: Span {
                                start: 41,
                                end: 69,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f3",
                                span: Span {
                                    start: 75,
                                    end: 77,
                                },
                            },
                            ty: Type {
                                value: HashSet(
                                    Type {
                                        value: U32,
                                        span: Span {
                                            start: 88,
                                            end: 91,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 79,
                                    end: 92,
                                },
                            },
                            id: Id {
                                value: 3,
                                span: Span {
                                    start: 93,
                                    end: 95,
                                },
                            },
                            span: Span {
                                start: 75,
                                end: 95,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f4",
                                span: Span {
                                    start: 101,
                                    end: 103,
                                },
                            },
                            ty: Type {
                                value: Option(
                                    Type {
                                        value: U32,
                                        span: Span {
                                            start: 112,
                                            end: 115,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 105,
                                    end: 116,
                                },
                            },
                            id: Id {
                                value: 4,
                                span: Span {
                                    start: 117,
                                    end: 119,
                                },
                            },
                            span: Span {
                                start: 101,
                                end: 119,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f5",
                                span: Span {
                                    start: 125,
                                    end: 127,
                                },
                            },
                            ty: Type {
                                value: NonZero(
                                    Type {
                                        value: U32,
                                        span: Span {
                                            start: 138,
                                            end: 141,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 129,
                                    end: 142,
                                },
                            },
                            id: Id {
                                value: 5,
                                span: Span {
                                    start: 143,
                                    end: 145,
                                },
                            },
                            span: Span {
                                start: 125,
                                end: 145,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
