crates/stef-parser/tests/snapshots/parser__parse@types_nested.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "struct Sample {\n    value: vec<option<non_zero<hash_map<i64, box<string>>>>> @1,\n}"
input_file: crates/stef-parser/tests/inputs/types_nested.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 7,
                        end: 13,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "value",
                                span: Span {
                                    start: 20,
                                    end: 25,
                                },
                            },
                            ty: Vec(
                                Option(
                                    NonZero(
                                        HashMap(
                                            (
                                                I64,
                                                BoxString,
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 77,
                                    end: 79,
                                },
                            },
                            span: Span {
                                start: 20,
                                end: 79,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
