crates/stef-parser/tests/snapshots/parser__parse@types_non_zero.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/types_non_zero.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f01",
                                span: Span {
                                    start: 20,
                                    end: 23,
                                },
                            },
                            ty: NonZero(
                                U8,
                            ),
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 38,
                                    end: 40,
                                },
                            },
                            span: Span {
                                start: 20,
                                end: 40,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f02",
                                span: Span {
                                    start: 46,
                                    end: 49,
                                },
                            },
                            ty: NonZero(
                                U16,
                            ),
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 65,
                                    end: 67,
                                },
                            },
                            span: Span {
                                start: 46,
                                end: 67,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f03",
                                span: Span {
                                    start: 73,
                                    end: 76,
                                },
                            },
                            ty: NonZero(
                                U32,
                            ),
                            id: Id {
                                value: 3,
                                span: Span {
                                    start: 92,
                                    end: 94,
                                },
                            },
                            span: Span {
                                start: 73,
                                end: 94,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f04",
                                span: Span {
                                    start: 100,
                                    end: 103,
                                },
                            },
                            ty: NonZero(
                                U64,
                            ),
                            id: Id {
                                value: 4,
                                span: Span {
                                    start: 119,
                                    end: 121,
                                },
                            },
                            span: Span {
                                start: 100,
                                end: 121,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f05",
                                span: Span {
                                    start: 127,
                                    end: 130,
                                },
                            },
                            ty: NonZero(
                                U128,
                            ),
                            id: Id {
                                value: 5,
                                span: Span {
                                    start: 147,
                                    end: 149,
                                },
                            },
                            span: Span {
                                start: 127,
                                end: 149,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f06",
                                span: Span {
                                    start: 155,
                                    end: 158,
                                },
                            },
                            ty: NonZero(
                                I8,
                            ),
                            id: Id {
                                value: 6,
                                span: Span {
                                    start: 173,
                                    end: 175,
                                },
                            },
                            span: Span {
                                start: 155,
                                end: 175,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f07",
                                span: Span {
                                    start: 181,
                                    end: 184,
                                },
                            },
                            ty: NonZero(
                                I16,
                            ),
                            id: Id {
                                value: 7,
                                span: Span {
                                    start: 200,
                                    end: 202,
                                },
                            },
                            span: Span {
                                start: 181,
                                end: 202,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f08",
                                span: Span {
                                    start: 208,
                                    end: 211,
                                },
                            },
                            ty: NonZero(
                                I32,
                            ),
                            id: Id {
                                value: 8,
                                span: Span {
                                    start: 227,
                                    end: 229,
                                },
                            },
                            span: Span {
                                start: 208,
                                end: 229,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f09",
                                span: Span {
                                    start: 235,
                                    end: 238,
                                },
                            },
                            ty: NonZero(
                                I64,
                            ),
                            id: Id {
                                value: 9,
                                span: Span {
                                    start: 254,
                                    end: 256,
                                },
                            },
                            span: Span {
                                start: 235,
                                end: 256,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f10",
                                span: Span {
                                    start: 262,
                                    end: 265,
                                },
                            },
                            ty: NonZero(
                                I128,
                            ),
                            id: Id {
                                value: 10,
                                span: Span {
                                    start: 282,
                                    end: 285,
                                },
                            },
                            span: Span {
                                start: 262,
                                end: 285,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f11",
                                span: Span {
                                    start: 291,
                                    end: 294,
                                },
                            },
                            ty: NonZero(
                                String,
                            ),
                            id: Id {
                                value: 11,
                                span: Span {
                                    start: 313,
                                    end: 316,
                                },
                            },
                            span: Span {
                                start: 291,
                                end: 316,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f12",
                                span: Span {
                                    start: 322,
                                    end: 325,
                                },
                            },
                            ty: NonZero(
                                Bytes,
                            ),
                            id: Id {
                                value: 12,
                                span: Span {
                                    start: 343,
                                    end: 346,
                                },
                            },
                            span: Span {
                                start: 322,
                                end: 346,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f13",
                                span: Span {
                                    start: 352,
                                    end: 355,
                                },
                            },
                            ty: NonZero(
                                Vec(
                                    String,
                                ),
                            ),
                            id: Id {
                                value: 13,
                                span: Span {
                                    start: 379,
                                    end: 382,
                                },
                            },
                            span: Span {
                                start: 352,
                                end: 382,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f14",
                                span: Span {
                                    start: 388,
                                    end: 391,
                                },
                            },
                            ty: NonZero(
                                HashMap(
                                    (
                                        String,
                                        Bytes,
                                    ),
                                ),
                            ),
                            id: Id {
                                value: 14,
                                span: Span {
                                    start: 427,
                                    end: 430,
                                },
                            },
                            span: Span {
                                start: 388,
                                end: 430,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "f15",
                                span: Span {
                                    start: 436,
                                    end: 439,
                                },
                            },
                            ty: NonZero(
                                HashSet(
                                    String,
                                ),
                            ),
                            id: Id {
                                value: 15,
                                span: Span {
                                    start: 468,
                                    end: 471,
                                },
                            },
                            span: Span {
                                start: 436,
                                end: 471,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
