crates/stef-parser/tests/snapshots/parser__print@alias-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/alias-basic.stef
---
/// Sample type alias.
type Sample = u32;

