crates/stef-parser/tests/snapshots/parser__print@alias_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias_basic.stef
---
/// Sample type alias.
type Sample = u32;

