crates/stef-parser/tests/snapshots/parser__print@attribute-single.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attribute-single.stef
---
#[deprecated = "don't use"]
struct Sample


