crates/stef-parser/tests/snapshots/parser__print@attribute_multi.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attribute_multi.stef
---
#[validate(min = 1, max = 100)]
struct Sample


